@@ -29,11 +29,9 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.onap.aai.AAISetup;
-import org.onap.aai.dbmap.DBConnectionType;
 import org.onap.aai.introspection.Loader;
 import org.onap.aai.introspection.ModelType;
 import org.onap.aai.setup.SchemaVersions;
-import org.onap.aai.setup.SchemaVersion;
 import org.onap.aai.serialization.engines.QueryStyle;
 import org.onap.aai.serialization.engines.JanusGraphDBEngine;
 import org.onap.aai.serialization.engines.TransactionalGraphEngine;
@@ -108,7 +106,7 @@ public class MigrateINVPhysicalInventoryTest extends AAISetup {
 	@Test
 	public void pnfsExistTest() throws Exception {
 		// check if pnf node gets created
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "pnf")
 						.count().next(),
 				"2 PNFs exist");
@@ -117,7 +115,7 @@ public class MigrateINVPhysicalInventoryTest extends AAISetup {
 	@Test
 	public void pInterfacesExistTest() throws Exception {
 
-		assertEquals(new Long(4L),
+		assertEquals(Long.valueOf(4L),
 				g.V().has("aai-node-type", "p-interface")
 						.count().next(),
 				"4 Pinterfaces exist");
@@ -128,7 +126,7 @@ public class MigrateINVPhysicalInventoryTest extends AAISetup {
 		// check if graph nodes exist
 		
 		// check if pnf node gets created
-		assertEquals(new Long(2L), 
+		assertEquals(Long.valueOf(2L), 
 				g.V().has("aai-node-type", "pnf")
 				.count().next(), 
 				"2 PNFs exist");
@@ -136,7 +134,7 @@ public class MigrateINVPhysicalInventoryTest extends AAISetup {
 		System.out.println("cOUNT:" +g.V().has("aai-node-type", "pnf")
 				.has("pnf-name", "pnf-name-collector-1").in("tosca.relationships.network.BindsTo").count().next());
 				
-		assertEquals(new Long(1L),
+		assertEquals(Long.valueOf(1L),
 				g.V().has("aai-node-type", "pnf")
 				.has("pnf-name", "pnf-name-collector-1").count().next(),
 				"p-interfaces created for pnfs");
@@ -148,7 +146,7 @@ public class MigrateINVPhysicalInventoryTest extends AAISetup {
 				.has("interface-name","1.7")
 				.hasNext(),
 				"p-interface 1.7 created for pnf-name-collector-1");
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "pnf")
 				.has("pnf-name", "pnf-name-1")
 				.in("tosca.relationships.network.BindsTo").count().next(),
