@@ -19,7 +19,8 @@
  */
 package org.onap.aai.migration.v14;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
@@ -33,10 +34,8 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.onap.aai.AAISetup;
-import org.onap.aai.dbmap.DBConnectionType;
 import org.onap.aai.introspection.Loader;
 import org.onap.aai.introspection.ModelType;
-import org.onap.aai.migration.v14.MigrateSameSourcedRCTROPserverData;
 import org.onap.aai.serialization.engines.QueryStyle;
 import org.onap.aai.serialization.engines.JanusGraphDBEngine;
 import org.onap.aai.serialization.engines.TransactionalGraphEngine;
@@ -965,7 +964,7 @@ public class MigrateSameSourcedRCTROPServerDataTest extends AAISetup{
     	assertEquals(true, g.V().has("aai-node-type", "p-interface").has("aai-uri","/cloud-infrastructure/pservers/pserver/rctP3/p-interfaces/p-interface/pint11").hasNext());
     	
     	//2. pint12 int-name matches with pint31. So, verify that p-int does not move from rctP1 to rctP3
-    	assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP3").in("tosca.relationships.network.BindsTo")
+    	assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP3").in("tosca.relationships.network.BindsTo")
         		.has("aai-node-type","p-interface").has("interface-name","pint12").count().next(), "rctP3 has only 1 pint with name pint12");
     	
     	//3. Verify that the p-interface from pserver is not moved to another pserver that has null fqdn
@@ -975,7 +974,7 @@ public class MigrateSameSourcedRCTROPServerDataTest extends AAISetup{
     	//4. If the fqdn is "" within 2 RCT pservers, ignore that case. Don't move the p-int from old resource-version to new resource-version pserver
     	assertEquals(false, g.V().has("aai-node-type", "pserver").has("hostname","rctP5").in("tosca.relationships.network.BindsTo")
         		.has("aai-node-type","p-interface").has("interface-name","pint41").hasNext());
-    	assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP5").in("tosca.relationships.network.BindsTo")
+    	assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP5").in("tosca.relationships.network.BindsTo")
         		.has("aai-node-type","p-interface").count().next(), "rctP5 has only 1 p-interface");		
        
     	//5. plink is moved from pint3 on pserver fqdn1 to pint2 on pserver fqdn3. Both p-ints have the same interface-name
@@ -1002,7 +1001,7 @@ public class MigrateSameSourcedRCTROPServerDataTest extends AAISetup{
 
     	
     	//2. lagint12 int-name matches with lagint31. So, verify that lag-int does not move from rctP1 to rctP3
-    	assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP3").in("tosca.relationships.network.BindsTo")
+    	assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP3").in("tosca.relationships.network.BindsTo")
         		.has("aai-node-type","lag-interface").has("interface-name","lagint12").count().next(), "rctP3 has only 1 lag-interface with name lagint12");
     	
     }
@@ -1010,7 +1009,7 @@ public class MigrateSameSourcedRCTROPServerDataTest extends AAISetup{
     @Test
     public void checkRCTPserverHasRelnToOnly1Zone() throws Exception {
 
-               assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","Scn6.pserverRCT1Scn6").out("org.onap.relationships.inventory.LocatedIn")
+               assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","Scn6.pserverRCT1Scn6").out("org.onap.relationships.inventory.LocatedIn")
                 .has("aai-node-type","zone").count().next(), "Edge to only 1 Zone exists");
                assertEquals(true, g.V().has("aai-node-type", "zone").has("zone-id","zone-62").hasNext());
                //Verify no edge exists from zone61 to lower resource-version RCT pserver
@@ -1020,7 +1019,7 @@ public class MigrateSameSourcedRCTROPServerDataTest extends AAISetup{
     @Test
     public void checkRCTPserverHasRelnTo2GenericVnfs() throws Exception {
 
-               assertEquals(new Long(2L), g.V().has("aai-node-type", "pserver").has("hostname","Scn6.pserverRCT1Scn6").in("tosca.relationships.HostedOn")
+               assertEquals(Long.valueOf(2L), g.V().has("aai-node-type", "pserver").has("hostname","Scn6.pserverRCT1Scn6").in("tosca.relationships.HostedOn")
                 .has("aai-node-type","generic-vnf").count().next(), "Edge to 2 generic-vnfs exists");
                assertEquals(true, g.V().has("aai-node-type", "generic-vnf").has("vnf-id","vnf-1").out().has("aai-node-type", "pserver").has("hostname", "Scn6.pserverRCT1Scn6").hasNext());
                //Verify no edge exists from vnf-1 to lower resource-version pserver
@@ -1037,7 +1036,7 @@ public class MigrateSameSourcedRCTROPServerDataTest extends AAISetup{
     	assertEquals(true, g.V().has("aai-node-type", "pserver").has("hostname","pserverRo.NewOne.aaaa.ccccccccccc").in("tosca.relationships.network.BindsTo")
     			.has("aai-node-type","p-interface").has("interface-name","pintRo1").out().has("link-name","plinkROonOldRo1").hasNext());
     	//Verify complex does not get attached to pserverRO5
-    	assertEquals(new Long(1L), g.V().has("physical-location-id", "complexOldRO").in("org.onap.relationships.inventory.LocatedIn").count().next(), "Complex is related to only 1 pserver");
+    	assertEquals(Long.valueOf(1L), g.V().has("physical-location-id", "complexOldRO").in("org.onap.relationships.inventory.LocatedIn").count().next(), "Complex is related to only 1 pserver");
     }
     
     @Test
